fix: 优化调用链路，简化代码。增加日志输出。